--- a/SDL_Framework/SDL_Framework.vcxproj
+++ b/SDL_Framework/SDL_Framework.vcxproj
@@ -28,7 +28,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v140</PlatformToolset>
+    <PlatformToolset>v120</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
@@ -41,7 +41,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v140</PlatformToolset>
+    <PlatformToolset>v120</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
@@ -71,11 +71,13 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(SolutionDir)\libs\SDL2\include;$(SolutionDir)\libs\SDL2_image\include;$(SolutionDir)\libs\SDL2_mixer\include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(SolutionDir)\libs\SDL2\lib\x86;$(SolutionDir)\libs\SDL2_image\lib\x86;$(SolutionDir)\libs\SDL2_mixer\lib\x86;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(SolutionDir)/libs/SDL2/include;$(SolutionDir)/libs/SDL2_image/include;$(SolutionDir)/libs/SDL2_mixer/include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)/libs/SDL2_mixer/lib/x86;$(SolutionDir)/libs/SDL2/lib/x86;$(SolutionDir)/libs/SDL2_image/lib/x86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
+    <IncludePath>$(SolutionDir)/libs/SDL2/include;$(SolutionDir)/libs/SDL2_image/include;$(SolutionDir)/libs/SDL2_mixer/include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)/libs/SDL2_mixer/lib/x86;$(SolutionDir)/libs/SDL2/lib/x86;$(SolutionDir)/libs/SDL2_image/lib/x86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
@@ -110,6 +112,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_mixer.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
